[package]
name = "cdumay_sodium"
version = "0.2.0"
edition = "2024"

authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "A Rust Library to use sodium"
documentation = "https://docs.rs/cdumay_sodium"
homepage = "https://github.com/cdumay/cdumay_sodium"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_sodium"

[dependencies]
base64 = "0.22"
cdumay_base64 = "0.1"
cdumay_core = "0.1"
cdumay_error = "2.0"
libsodium-sys = "0.2"
serde-value = "0.7"
sodiumoxide = "0.2"